--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\".up # \"ART VANDELAY\""
+    "\"art vandelay\".upper() # \"ART VANDELAY\""
    ]
   },
   {
