Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,22 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hello### whattttt'"
+       "'hello'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'hello' ### whattttt'"
+    "'hello' ### whattttt"
    ]
   },
   {
