Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,23 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'hello'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello ### what\n"
+     ]
     }
    ],
    "source": [
     "'hello' ### whattttt\n",
-    "print(\"hello ###\")"
+    "print(\"hello ### what\")"
    ]
   },
   {
