--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "if ()"
+    "if (art.vanderlay@vandelay.)"
    ]
   },
   {
