--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,8 @@
    "outputs": [],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "if (art.vanderlay@vandelay.)"
+    "if (art.vanderlay@vandelay.com)\n",
+    "    print ()"
    ]
   },
   {
