--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
     "if (art.vanderlay@vandelay.com)\n",
-    "    print ()"
+    "    print (art.va)"
    ]
   },
   {
