Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,9 +247,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "if (art.vanderlay@vandelay.com)\n",
-    "    print:(art.vanderlay@vanderlay.com)"
+    "\"art.vandelay@vandelay.co\" # False\n"
    ]
   },
   {
