--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art\""
+    "\"art.vanderlay@vanderlay.com.\""
    ]
   },
   {
