Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vanderlay@vanderlay.com\".endswith()"
+    "\"art.vanderlay@vanderlay.com\".endswith(.com)"
    ]
   },
   {
