--- a/index.ipynb
+++ b/index.ipynb
@@ -234,23 +234,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "\"art.vanderlay@vanderlay.com\".endswith(\".com\")"
+    "\"art.vanderlay@vanderlay.co\".endswith(\".com\")"
    ]
   },
   {
